Fix sortable item z-index

--- a/src/styles/components/stage-editor/_sortable-item.scss
+++ b/src/styles/components/stage-editor/_sortable-item.scss
@@ -14,6 +14,7 @@
 .stage-editor-sortable-item {
   margin-top: unit(1);
   display: flex;
+  z-index: var(--z-fx);
 
   &__handle {
     @extend %content-item-control;
